@@ -1,7 +1,7 @@
 dnl
-dnl $Id: cgicc.m4,v 1.4 2001/09/05 02:20:51 sbooth Exp $
+dnl $Id: cgicc.m4,v 1.5 2002/03/02 06:25:25 sbooth Exp $
 dnl
-dnl Copyright (C) 2000, 2001 Stephen F. Booth
+dnl Copyright (C) 2000 - 2002 Stephen F. Booth
 dnl
 dnl This program is free software; you can redistribute it and/or modify
 dnl it under the terms of the GNU General Public License as published by
@@ -53,7 +53,7 @@ AC_DEFUN(CGICC_CHECK_HEADERS, [
 
   cgicc_include_dir=ifelse([$1], ,$cgicc_includedir,$1)
 
-  list="CgiDefs.h CgiEnvironment.h CgiUtils.h Cgicc.h FormEntry.h FormFile.h HTMLAtomicElement.h HTMLAttribute.h HTMLAttributeList.h HTMLBooleanElement.h HTMLClasses.h HTMLDoctype.h HTMLElement.h HTMLElementList.h HTTPContentHeader.h HTTPCookie.h HTTPHTMLHeader.h HTTPHeader.h HTTPHeaders.h HTTPPlainHeader.h HTTPRedirectHeader.h HTTPResponseHeader.h HTTPStatusHeader.h MStreamable.h"
+  list="CgiDefs.h CgiEnvironment.h CgiInput.h CgiUtils.h Cgicc.h FormEntry.h FormFile.h HTMLAtomicElement.h HTMLAttribute.h HTMLAttributeList.h HTMLBooleanElement.h HTMLClasses.h HTMLDoctype.h HTMLElement.h HTMLElementList.h HTTPContentHeader.h HTTPCookie.h HTTPHTMLHeader.h HTTPHeader.h HTTPPlainHeader.h HTTPRedirectHeader.h HTTPResponseHeader.h HTTPStatusHeader.h MStreamable.h"
   for file in $list; do
     if ! test -e "$cgicc_include_dir/cgicc/$file"; then
       cgicc_headers_found=no
