@@ -1,3 +1,9 @@
+2002-03-02  Stephen F. Booth  <sbooth@gnu.org>
+
+	* cgicc.m4: Don't check for HTTPHeaders.h
+	* cgicc.m4: Check for CgiInput.h
+	* example.cpp: Changed include to HTTPHTMLHeader
+
 2001-09-03  Stephen F. Booth  <sbooth@gnu.org>
 
 	* configure.in: Renamed to configure.ac
